selfhost/test/typechecker/lambda/error_unknown_type_for_parameter.3.out
Error at %FILE_NAME%:1:27
Could not determine type for parameter 'b'
  |  val f: (Int) => Int = (a, b) => 123
                               ^
Consider adding a type annotation
